# rKPC

./: .gitignore  Cargo.toml  README.md  TODO  collision_log.txt  run_release.bat
REZ/WORLDS/REALM0/: Kanga.ed
REZ/WORLDS/REALM1/: R1M1A.triggers.json  R1M1B.triggers.json
REZ/WORLDS/REALM2/: R2M1B.triggers.json  R2M2A.triggers.json  R2M2B.triggers.json
REZ/WORLDS/REALM3/: R3M3A.triggers.json
shaders/: egui.frag  frag.spv  shader.frag  shader.vert  vert.spv
src/: app.rs  lib.rs  main.rs  settings.rs
src/kiss_engine/Mechanics/collision/: BVH.rs  KClipPolyToZRange.rs  KCollision.rs  KHeightProvider.rs  KMeshHeightProvider.rs  KMovingCylinder.rs  bsp_collision.c  collision.rs  mod.rs
src/kiss_engine/Mechanics/enemies/: enemy_ai.c  mod.rs
src/kiss_engine/Mechanics/levelscripting/: KTrigger.rs  scripted_sequence.rs  trigger.rs
src/kiss_engine/Mechanics/objects/: CBarrel.rs  CCrate.rs  CCreature.rs  CDoorSliding.rs  CLadder.rs  CPickupItem.rs  CRotatingCeilingFan.rs  CSwitchRotating.rs  CSwitchSlide.rs  CTorch.rs  (+7 more)
src/kiss_engine/Resources/: pcx.rs
src/kiss_engine/abc/: abc.rs
src/kiss_engine/collision/: collision.rs
src/kiss_engine/dat/: dat.rs  dat_mesh.rs  world_loader.rs
src/kiss_engine/egui/: egui_renderer.rs
src/kiss_engine/player/: player_movement.rs
src/kiss_engine/rendering/: CameraObj.rs  LightObj.rs  LightingUbo.rs  OcclusionCulling.rs  ShadowObj.rs  camera.rs  lighting.rs  lighting_ubo.rs  lights.rs  occlusion_culling.rs  types.rs
src/kiss_engine/util/: mod.rs
src/kiss_engine/vulkan/: helpers.rs  pipeline.rs  setup.rs  texture.rs
(+86 files in other folders)
