[package]
name = "rustKPC"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.35.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
egui = "0.28"
egui-winit = "0.28"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"